fixed button alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -335,7 +335,7 @@ button {
    padding: 15px 15px;
    border-radius: 30px;
    position: relative;
-   right: 124itepx;
+   right: 125px;
 }
 
 .footer {
